# teach

./: README.md
git/: flake.nix  run.py
git/introgit/: README.md  howto.md
git/simple_gh_practice/: slides.md
pynix/: README.md  build_python_package.nix  first_build.nix  flake.nix  pyproject.toml  pyproject_build.nix  simple.nix  simple_build.nix
pynix/src/ashow/: flame.py  yeah.py
pynix/tests/: test_main.py
