[project]
name = "ashow"
version = "0.1.0"
authors = [
    { name = "harvidsen", email = "hakon.arvidsen@eviny.no" }
]
dependencies = [
  "asciimatics",
]

[project.scripts]
flame = "ashow.flame:run_flame_show"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashow"]
